[package]
name = "lgp"
version = "1.0.0"
edition = "2021"
authors = ["Urmzd Mukhammadnaim; urmzd@dal.ca"]

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18", features = ["full", "macros"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
more-asserts = { version = "0.2" }
toml = "0.5"
lazy_static = "1.4.0"
derive-new = "0.5"
derivative = "2.2.0"
derive_more = { version = "0.99" }
plotters = "0.3.1"
itertools = "0.10"
tracing = {version = "0.1", default-features=false }
tracing-subscriber = { version = "0.3", default-features=false, features = ["env-filter", "fmt", "json", "std", "valuable"] }
valuable = { version = "0.1.0", features = ["derive"] } 
gym-rs = { git = "https://github.com/urmzd/gym-rs" }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"
tempfile = "3.3"
pretty_assertions = { version = "1.2" }
tabled = "0.7"
tpe = "0.2"

[[example]]
name = "mountain_car"
path = "examples/mountain_car/main.rs"
test = true

[[example]]
name = "iris"
path = "examples/iris/main.rs"
test = true

[[example]]
name = "cart_pole"
path = "examples/cart_pole/main.rs"
test = true

[[example]]
name = "mountain_car_search"
path = "examples/mountain_car/search.rs"

[[example]]
name = "mountain_car_compare"
path = "examples/mountain_car/compare.rs"
