[workspace]
members = ["crates/lgp", "crates/lgp-cli"]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
authors = ["Urmzd Mukhammadnaim; urmzd@dal.ca"]
description = "A library to solve problems using linear genetic programming"

[workspace.dependencies]
# Common dependencies shared across crates
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18", features = ["full", "macros"] }
rand = "0.8.5"
rand_xoshiro = "0.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
lazy_static = "1.4"
derivative = "2.2"
derive_more = { version = "0.99" }
itertools = "0.10"
tracing = { version = "0.1", default-features = false }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json", "std"] }
gymnasia = { version = "1.0", default-features = false }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13"
derive_builder = "0.12"
reqwest = "0.11"
rayon = "1.7"
glob = "0.3.1"
toml = "0.8"
chrono = "0.4"
criterion = "0.4.0"
