[project]
name = "lgp-tools"
version = "0.1.0"
description = "Experimentation tools for Linear Genetic Programming"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "optuna>=3.1.0",
    "optuna-dashboard>=0.8.1",
    "cmaes>=0.9.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "loguru>=0.6",
    "psycopg2-binary>=2.9",
    "SQLAlchemy>=2.0",
    "tqdm>=4.65",
]

[project.scripts]
lgp-tools = "lgp_tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
