[project]
name = "lgp-tools"
version = "1.3.1"
description = "Experimentation tools for Linear Genetic Programming"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "optuna>=3.1.0",
    "optuna-dashboard>=0.8.1",
    "cmaes>=0.9.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "loguru>=0.6",
    "psycopg2-binary>=2.9",
    "SQLAlchemy>=2.0",
    "tqdm>=4.65",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

[project.scripts]
lgp-tools = "lgp_tools.cli:app"

[project.optional-dependencies]
dev = ["ruff>=0.9.0"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
target-version = "py311"
line-length = 100
include = ["lgp_tools/**/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["lgp_tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
