[package]
name = "lgp-experiments"
version = "0.1.0"
edition = "2021"
authors = ["Urmzd Mukhammadnaim; urmzd@dal.ca"]
description = "Thesis experiments for the LGP framework"

[[bin]]
name = "lgp-exp"
path = "src/main.rs"

[dependencies]
lgp = { path = ".." }
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
gym-rs = { git = "https://github.com/urmzd/gym-rs" }
tokio = { version = "1.18", features = ["full", "macros"] }
config = "0.13"
