[package]
name = "lgp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for Linear Genetic Programming experiments"
license = "MIT"
repository = "https://github.com/urmzd/linear-gp"

[[bin]]
name = "lgp"
path = "src/main.rs"

[dependencies]
lgp = { path = "../lgp", version = "1.1", features = ["gym"] }
clap = { version = "4.1.8", features = ["derive"] }
chrono = "0.4"
toml = "0.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
gymnasia = { version = "1.0", default-features = false }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json", "std", "ansi"] }
